Fix for nav bar dropdown on small

--- a/app/static/css/site-sm.styl
+++ b/app/static/css/site-sm.styl
@@ -38,6 +38,15 @@
     padding-top: 10px
     padding-bottom: 10px
 
+  .navbar-nav .open .dropdown-menu
+    background-color: rgba(0, 0, 0, 0);
+    border: 0 none;
+    box-shadow: none;
+    float: none;
+    margin-top: 0;
+    position: static;
+    width: auto;
+
 
 /* catch iPad in landscape */
 @media only screen and (max-device-width : 1024px)
